@@ -1,5 +1,12 @@
 1999-10-23  Kenichi OKADA <okada@opaopa.org>
 
+	* smtp.el (smtp-auth-cram-md5): Update to delete
+	insecure sequences at plain.
+	(smtp-auth-login): Update to delete
+	insecure sequences at plain.
+
+1999-10-23  Kenichi OKADA <okada@opaopa.org>
+
 	* smtp.el (smtp-auth-cram-md5): New function.
 	(smtp-auth-plain): New function.
 	(smtp-auth-login): New function.
